@@ -1,5 +1,7 @@
 User-visible changes in version 0.5.1 (2005-0 -  ):
 * data tranformations: treat "3 < x < 4" like "3 < x and x < 4"
+* GUI data viewer - "Fit Zoom" button 
+
 
 User-visible changes in version 0.5.0 (2005-06-09):
 * d.load -- possibility of loading of only selected points from file 
